# cli-buddy

./: Cargo.toml  readme.md  rustfmt.toml
buddy/: buddy.toml  instructions.md
src/: main.rs
src/ais/: asst.rs  mod.rs  msg.rs
src/ais/asst/: mod.rs
src/buddy/: config.rs  mod.rs
src/utils/: files.rs  mod.rs
