[package]
name = "cli-buddy"
version = "0.1.0"
edition = "2021"

[lint.rust]
unsafe_code = "forbid"
# unused = "allow"

[dependencies]
# -- Async
tokio = { version = "1.37.0", features = ["full"] }
# -- AI
async-openai = "0.20.0"
# -- D/Serialize
toml = "0.8.12"
serde = { version = "1.0.20", features = ["derive"] }
serde_json = "1.0.116"
# -- CLI
dialoguer = "0.11.0"
console = "0.15.8"
textwrap = "0.16.1"
# -- Files
walkdir = "2.5.0"
globset = "0.4.14"
# -- Others
derive_more = { version = "1.0.0-beta.6", features = [
  "from",
  "display",
  "deref",
] }
